# smart-network-intrusion-detection-system

./: .dockerignore  .env.example  .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  RELEASE.md  ROADMAP.md  SECURITY.md  SUPPORT.md  StepsToRun.txt  docker-compose.yml  nids.spec  pyproject.toml  render.yaml  requirements-dev.txt  requirements.txt
.claude/: launch.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  model_feedback.md  question.md  security_report.md
.github/workflows/: container.yml  desktop.yml  lint.yml  release.yml  retrain.yml  security.yml  test.yml
.streamlit/: config.toml
IDS PROJECT/: TheCode.ipynb  app.py  dt_model.pkl
TestingPCAPS/: ddos_attack.pcap
config/: features.yaml
data/pcaps/: mixed_attack.pcap  neptune_attack.pcap
docs/: DATASET.md
docs/api/: api.md
docs/architecture/: architecture.md
docs/deployment/: desktop-exe.md  docker.md
docs/guides/: running-locally.md  (+1 more)
models/: dt_model.pkl  iforest_model.pkl
notebooks/: TheCode.ipynb  TheCode.py
scripts/: build_exe.py  desktop_launcher.py  make_icon.py  train_models.py
tests/: test_alerts.py  test_alerts_extra.py  test_anomaly.py  test_api.py  test_auth.py  test_auth_roles.py  test_autonomy.py  test_crypto.py  test_features.py  test_firewall.py  test_geo.py  test_netcheck.py  test_notify.py  test_release_consistency.py  test_reporting.py  test_storage.py  test_storage_paths.py  test_throughput.py  test_triage.py
(+31 files in other folders)
